<resources>
    <string name="app_name">Orchard Manager</string>
    <string name="nav_header_title">Orchard manager</string>
    <string name="nav_header_subtitle">orchardManager.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="field_name">Name</string>
    <string name="save_button_text">Save</string>
    <string name="new_button_text">New</string>
    <string name="delete_button_text">Delete</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="start_date">Start Date</string>
    <string name="stop_date">Stop Date</string>
    <string name="start_time">Start Time</string>
    <string name="stop_time">Stop Time</string>
    <string name="soil_moisture">Soil Moisture</string>
    <string name="percent_sand_silt_and_clay">Percent Sand, Silt, and Clay</string>
    <string name="select_an_orchard">Select an Orchard</string>
    <string name="select_a_unit">Select a Unit</string>
    <string name="select_an_irrigation_system">Select an Irrigation System</string>
    <string name="mm_dd_yyyy">mm-dd-yyyy</string>
    <string name="treerequestkey">treeRequestKey</string>
    <string name="treekey">treeKey</string>
    <string name="farmer">Farmer</string>
    <string name="farm">Farm</string>
    <string name="orchard">Orchard</string>
    <string name="orchard_activity">Orchard Activity</string>
    <string name="map">Map</string>
    <string name="trees">Trees</string>
    <string name="pumps">Pumps</string>
    <string name="irrigation">Irrigation</string>
    <string name="irrigation_system">Irrigation System</string>
    <string name="fertilizer_application">Fertilizer Application</string>
    <string name="fertilizers">Fertilizers</string>
    <string name="pesticide_application">Pesticide Application</string>
    <string name="pesticide">Pesticide</string>
    <string name="select_a_farm">Select a Farm</string>
    <string name="select_an_existing_orchard">Select an Existing Orchard</string>
    <string name="enter_a_crop">Enter a crop</string>
    <string name="planted_date">Planted Date</string>
    <string name="select_a_variety">Select a variety</string>
    <string name="variety">Variety</string>
    <string name="name">Name</string>
    <string name="enter_the_variety_name">Enter the variety name</string>
    <string name="enter_the_cultivar_if_applicable">Enter the cultivar (if applicable)</string>
    <string name="select_a_rootstock">Select a rootstock</string>
    <string name="rootstock">Rootstock</string>
    <string name="enter_the_name_of_the_rootstock">Enter the name of the rootstock</string>
    <string name="cultivar">Cultivar</string>
    <string name="rootstock_type">Rootstock Type</string>
    <string name="select_a_past_irrigation">Select a Past Irrigation</string>
    <string name="select_a_pump">Select a Pump</string>
    <string name="irrigation_method">Irrigation Method</string>
    <string name="emitter_flow_rate">Emitter Flow Rate</string>
    <string name="emitter_radius">Emitter Radius</string>
    <string name="crop">Crop</string>
    <string name="select_a_saved_activity">Select a Saved Activity</string>
    <string name="orchard_activities">Orchard Activities</string>
    <string name="notes">Notes</string>
    <string name="select_a_fertilizer_application">Select a Fertilizer Application</string>
    <string name="select_a_fertilizer">Select a Fertilizer</string>
    <string name="amount_applied">Amount Applied</string>
    <string name="enter_the_amount_applied">Enter the amount applied</string>
    <string name="area_treated">Area Treated</string>
    <string name="enter_the_area_treated">Enter the area treated</string>
    <string name="select_a_pesticide_application">Select a Pesticide Application</string>
    <string name="select_a_pesticide">Select a Pesticide</string>
    <string name="application_stopped">Application Stopped</string>
    <string name="application_stop_time">Application Stop Time</string>
    <string name="dilution">Dilution</string>
    <string name="select_an_application_method">Select an Application Method</string>
    <string name="primary_secondary_surface_well_etc">Primary, secondary, Surface, Well, etc.</string>
    <string name="emitter_spacing">Emitter Spacing</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="address">Address</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="city">City</string>
    <string name="enter_your_city">Enter your city</string>
    <string name="state">State</string>
    <string name="enter_your_state">Enter your state</string>
    <string name="zip">Zip</string>
    <string name="enter_your_zip">Enter your zip</string>
    <string name="phone">Phone</string>
    <string name="_000_000_0000">000–000–0000</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="please_select_an_orchard">Please select an Orchard</string>
    <string name="saved">Saved</string>
    <string name="invalid_time_format_00_00">Invalid time format 00:00</string>
    <string name="invalid_date_format_mm_dd_yyyy">Invalid date format mm-dd-yyyy</string>
    <string name="please_select_an_orchard_or_fertilizer">Please select an orchard or fertilizer</string>
    <string name="update_failed">Update Failed</string>
    <string name="select_a_tree_first">Select a tree first</string>
    <string name="row_width">Row Width</string>
    <string name="_00_0">00.0</string>
    <string name="select_the_unit">Select the Unit</string>
    <string name="distance_between_trees">Tree Spacing</string>
    <string name="sand_0_0">Sand 0.0</string>
    <string name="silt_0_0">Silt 0.0</string>
    <string name="clay_0_0">Clay 0.0</string>
    <string name="percent_organic_matter">Percent Organic Matter</string>
    <string name="percent_organic_matter_ex_5_0">Percent organic matter (ex 5.0)</string>
    <string name="save_failed">Save Failed</string>
    <string name="fertilizer_name">Fertilizer Name</string>
    <string name="enter_the_fertilizer_name">Enter the fertilizer name</string>
    <string name="nitrogen">Nitrogen</string>
    <string name="enter_the_percent_nitrogen">Enter the percent nitrogen</string>
    <string name="phosphorous">Phosphorous</string>
    <string name="enter_the_percent_phosphorous">Enter the percent phosphorous</string>
    <string name="potassium">Potassium</string>
    <string name="enter_the_percent_potassium">Enter the percent potassium</string>
    <string name="sulfur">Sulfur</string>
    <string name="enter_the_percent_sulfur">Enter the percent sulfur</string>
    <string name="calcium">Calcium</string>
    <string name="enter_the_percent_calcium">Enter the percent calcium</string>
    <string name="magnesium">Magnesium</string>
    <string name="enter_the_percent_magnesium">Enter the percent magnesium</string>
    <string name="boron">Boron</string>
    <string name="enter_the_percent_boron">Enter the percent boron</string>
    <string name="zinc">Zinc</string>
    <string name="enter_the_percent_zinc">Enter the percent zinc</string>
    <string name="iron">Iron</string>
    <string name="enter_the_percent_iron">Enter the percent iron</string>
    <string name="manganese">Manganese</string>
    <string name="enter_the_percent_manganese">Enter the percent manganese</string>
    <string name="molybdenum">Molybdenum</string>
    <string name="enter_the_percent_molybdenum">Enter the percent molybdenum</string>
    <string name="chloride">Chloride</string>
    <string name="enter_the_percent_chloride">Enter the percent chloride</string>
    <string name="copper">Copper</string>
    <string name="enter_the_percent_copper">Enter the percent copper</string>
    <string name="nickel">Nickel</string>
    <string name="enter_the_percent_nickel">Enter the percent nickel</string>
    <string name="organic_matter">Organic Matter</string>
    <string name="enter_the_percent_organic_matter">Enter the percent organic matter</string>
    <string name="_00_00">00:00</string>
    <string name="_000_00">000.00</string>
    <string name="site_id">Site ID</string>
    <string name="farm_name">Farm Name</string>
    <string name="enter_the_name_of_the_farm">Enter the name of the farm</string>
    <string name="enter_the_site_id">Enter the Site ID</string>
    <string name="orchard_activity_report">Orchard Activity Report</string>
    <string name="orchard_activities_report">Orchard Activities Report</string>
    <string name="pump_type">Pump Type</string>
    <string name="submersible_turbine_gate_no_pump">Submersible, Turbine, Gate(No Pump)</string>
    <string name="pump_horsepower">Pump Horsepower</string>
    <string name="enter_the_pump_s_horsepower">Enter the pump\'s horsepower</string>
    <string name="pump_phase">Pump Phase</string>
    <string name="_3_1">3, 1 ?</string>
    <string name="pump_flow_rate">Pump Flow Rate</string>
    <string name="enter_the_pump_s_flow_rate">Enter the pump\'s flow rate</string>
    <string name="mark_a_tree">Mark a Tree</string>
    <string name="version">Version</string>
    <string name="let_s_get_to_work">Let\'s get to work…</string>
    <string name="check_for_updates">Check For Updates</string>
    <string name="add_a_record">Add a record</string>
    <string name="fertilizer_report">Fertilizer Report</string>
    <string name="irrigation_report">Irrigation Report</string>
    <string name="total_irrigation_hours">Total Irrigation Hours:  </string>
    <string name="total_gallons_pumped">Total gallons pumped:  </string>
    <string name="_15">15</string>
    <string name="_12">12</string>
    <string name="add_a_new_tree">Add a New Tree</string>
    <string name="enter_notes_here">Enter notes here</string>
    <string name="enter_the_pesticide_name">Enter the pesticide name</string>
    <string name="epa_registration_number">EPA Registration Number</string>
    <string name="epa_reg_no_on_the_label">epa reg no on the label</string>
    <string name="select_the_signal_word">Select the Signal Word</string>
    <string name="rei">REI</string>
    <string name="_24">24</string>
    <string name="_100">100</string>
    <string name="pesticide_report">Pesticide Report</string>
    <string name="select_a_previous_reading">Select a Previous Reading</string>
    <string name="enter_the_centibar_reading">Enter the Centibar Reading</string>
    <string name="_00">00</string>
    <string name="percent_soil_moisture">Percent Soil Moisture</string>
    <string name="licenses">Licenses</string>
    <string name="add_a_pump_to_the_irrigation_system">Add a pump to the irrigation system</string>
    <string name="_24_0">24.0</string>
    <string name="select_a_date_the_orchard_was_planted">Select a date the orchard was planted</string>
    <string name="_06_00">06:00</string>
    <string name="generate_a_report_of_orchard_activities">Generate a report of orchard activities</string>
    <string name="select_a_stop_time">Select a stop time</string>
    <string name="select_a_start_date">Select a start date</string>
    <string name="select_a_stop_date">Select a stop date</string>
    <string name="select_a_start_time">Select a start time</string>
    <string name="add_a_pesticide">Add a pesticide</string>
    <string name="generate_a_pesticide_report">Generate a pesticide report</string>
    <string name="select_an_end_date">Select an end date</string>
    <string name="select_a_time">Select a time</string>
    <string name="select_a_date">Select a date</string>
    <string name="go_forward">Go forward</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="quit">Quit</string>
</resources>