<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_orchardTask"
            android:icon="@drawable/ic_baseline_eco_24"
            android:title="@string/orchard_activity"/>
        <item
            android:id="@+id/nav_tree"
            android:icon="@drawable/ic_baseline_forest_24"
            android:title="@string/trees"/>
        <item
            android:id="@+id/nav_irrigation"
            android:icon="@drawable/ic_baseline_waves_24"
            android:title="@string/irrigation"/>
        <item
            android:id="@+id/nav_fertilizerApplication"
            android:icon="@drawable/ic_baseline_science_24"
            android:title="@string/fertilizer_application"/>
        <item
            android:id="@+id/nav_pesticideApplication"
            android:icon="@drawable/ic_baseline_bug_report_24"
            android:title="@string/pesticide_application"/>
    </group>
</menu>