<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AgricultureEditText"
    tools:context=".ui.irrigation.PumpFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/select_a_pump"/>
        <Spinner
            android:id="@+id/pumps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/pump_type"/>
        <EditText
            android:id="@+id/pumpType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/submersible_turbine_gate_no_pump"
            android:inputType="text"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/pump_horsepower" />
        <EditText
            android:id="@+id/horsepower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_pump_s_horsepower"
            android:inputType="numberDecimal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/pump_phase"/>
        <EditText
            android:id="@+id/phase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/_3_2_1"
            android:inputType="number"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/pump_flow_rate"/>
        <EditText
            android:id="@+id/pumpFlowRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_pump_s_flow_rate"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/select_a_unit"/>
        <Spinner
            android:id="@+id/pumpFlowRateUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/savePump"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/save_button_text"/>
            <Button
                android:id="@+id/newPump"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/new_button_text"/>
            <Button
                android:id="@+id/deletePump"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_button_text"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>