<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AgricultureEditText"
    tools:context=".ui.trees.VarietyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/select_a_variety" />
        <Spinner
            android:id="@+id/varieties"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/variety"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/name"/>
        <EditText
            android:id="@+id/varietyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_variety_name"
            android:inputType="text"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="Cultivar"/>
        <EditText
            android:id="@+id/varietyCultivar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_cultivar_if_applicable"
            android:inputType="text"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/saveVariety"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:text="@string/save_button_text"/>
            <Button
                android:id="@+id/newVariety"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:text="@string/new_button_text"/>
            <Button
                android:id="@+id/deleteVariety"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_button_text"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>